--- a/style.css
+++ b/style.css
@@ -791,8 +791,8 @@ body {
 
   .modal {
     min-width: 100%;
-    min-height: 100%;
-    padding: 0 30px 20px 30px;
+    /* min-height: 100%; */
+    padding: 0 30px 30px 30px;
   }
 
   .modal-btn {
