--- a/style.css
+++ b/style.css
@@ -682,6 +682,10 @@ body {
 }
 
 @media screen and (max-width: 992px) {
+  body {
+    padding: 0;
+  }
+
   .wrapper {
     display: block;
   }
@@ -692,8 +696,8 @@ body {
   }
 
   .img-thumb {
-    width: 300px;
-    height: 260px;
+    width: 100%;
+    padding: 0;
   }
 
   .about-me-container {
