--- a/style.css
+++ b/style.css
@@ -696,8 +696,9 @@ body {
   }
 
   .img-thumb {
-    width: 100%;
-    padding: 0;
+    max-width: 100%;
+    margin: auto;
+    height: 100%;
   }
 
   .about-me-container {
@@ -705,22 +706,27 @@ body {
   }
 
   .info-container {
+    display: flex;
     margin-bottom: 20px;
   }
 
+  .info-container div {
+    margin: auto;
+  }
+
   .name {
-    font-size: 29px;
+    font-size: 28px;
     line-height: 40px;
   }
 
   .profession {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 20px;
     margin-left: 155px;
   }
 
   .section-title {
-    font-size: 20px;
+    font-size: 19px;
     line-height: 15px;
   }
 
@@ -801,7 +807,7 @@ body {
 
   .modal-text {
     font-size: 13px;
-    line-height: 20px;
+    line-height: 19px;
   }
 
   .modal-text p:not(:last-child) {
