--- a/style.css
+++ b/style.css
@@ -52,6 +52,42 @@ body {
   padding-bottom: 110px;
 }
 
+.lang-box {
+  position: absolute;
+  top: 60px;
+  right: 185px;
+  display: inline-block;
+  padding: 5px 7px;
+  background-color: #1e2939;
+  border: 3px solid brown;
+  border-radius: 4px;
+}
+
+.lang-box button {
+  border: transparent;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+.lang-box button:hover,
+.lang-box button:focus {
+  color: white;
+  background-color: brown;
+}
+
+.resume-en {
+  background-color: brown;
+  color: white;
+  padding: 4px 4px 2px 3px;
+}
+
+.resume-rus {
+  padding: 4px 3px 2px 3px;
+  margin-right: 5px;
+  color: brown;
+  background-color: white;
+}
+
 /* CONTACTS */
 
 .contacts-container {
@@ -519,7 +555,7 @@ body {
 
 .courses {
   margin-bottom: 30px;
-  width: 315px;
+  width: 320px;
   /* background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3C!-- Created with Inkscape (http://www.inkscape.org/) --%3E%3Csvg xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:cc='http://creativecommons.org/ns%23' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23' xmlns:svg='http://www.w3.org/2000/svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' width='55.989033' height='49.850792' id='svg2' sodipodi:version='0.32' inkscape:version='0.46' sodipodi:docname='Libro.svg' inkscape:output_extension='org.inkscape.output.svg.inkscape' inkscape:export-filename='D:%5CAles%5CJoseAntonio%5CGraficos%5CICO%5CLibro.png' inkscape:export-xdpi='90' inkscape:export-ydpi='90' version='1.0'%3E%3Cdefs id='defs4'%3E%3ClinearGradient inkscape:collect='always' id='linearGradient3215'%3E%3Cstop style='stop-color:%23ffd5d5;stop-opacity:1' offset='0' id='stop3217' /%3E%3Cstop style='stop-color:%23ff0000;stop-opacity:1' offset='1' id='stop3219' /%3E%3C/linearGradient%3E%3ClinearGradient inkscape:collect='always' id='linearGradient3205'%3E%3Cstop style='stop-color:%23552200;stop-opacity:1' offset='0' id='stop3207' /%3E%3Cstop style='stop-color:%23aa4400;stop-opacity:1' offset='1' id='stop3209' /%3E%3C/linearGradient%3E%3ClinearGradient inkscape:collect='always' id='linearGradient3175'%3E%3Cstop style='stop-color:%23ff9955;stop-opacity:1;' offset='0' id='stop3177' /%3E%3Cstop style='stop-color:%23ffccaa;stop-opacity:1' offset='1' id='stop3179' /%3E%3C/linearGradient%3E%3ClinearGradient inkscape:collect='always' id='linearGradient3165'%3E%3Cstop style='stop-color:%23808080;stop-opacity:1' offset='0' id='stop3167' /%3E%3Cstop style='stop-color:%23e6e6e6;stop-opacity:1' offset='1' id='stop3169' /%3E%3C/linearGradient%3E%3ClinearGradient inkscape:collect='always' id='linearGradient3155'%3E%3Cstop style='stop-color:%23552200;stop-opacity:1;' offset='0' id='stop3157' /%3E%3Cstop style='stop-color:%23d45500;stop-opacity:1' offset='1' id='stop3159' /%3E%3C/linearGradient%3E%3Cinkscape:perspective sodipodi:type='inkscape:persp3d' inkscape:vp_x='0 : 526.18109 : 1' inkscape:vp_y='0 : 1000 : 0' inkscape:vp_z='744.09448 : 526.18109 : 1' inkscape:persp3d-origin='372.04724 : 350.78739 : 1' id='perspective10' /%3E%3ClinearGradient inkscape:collect='always' xlink:href='%23linearGradient3155' id='linearGradient3161' x1='297.67511' y1='178.7702' x2='468.16641' y2='437.44653' gradientUnits='userSpaceOnUse' /%3E%3ClinearGradient inkscape:collect='always' xlink:href='%23linearGradient3165' id='linearGradient3171' x1='417.34094' y1='478.75085' x2='505.17892' y2='284.89575' gradientUnits='userSpaceOnUse' /%3E%3ClinearGradient inkscape:collect='always' xlink:href='%23linearGradient3175' id='linearGradient3181' x1='275.07126' y1='176.01337' x2='487.98697' y2='291.72845' gradientUnits='userSpaceOnUse' /%3E%3ClinearGradient inkscape:collect='always' xlink:href='%23linearGradient3205' id='linearGradient3211' x1='238.73965' y1='231.3362' x2='460.21536' y2='392.67606' gradientUnits='userSpaceOnUse' /%3E%3CradialGradient inkscape:collect='always' xlink:href='%23linearGradient3215' id='radialGradient3221' cx='525.54358' cy='407.12192' fx='525.54358' fy='407.12192' r='75.093948' gradientTransform='matrix(0.8448317,-0.1285871,0.1338057,0.8791184,6.1580993,113.75734)' gradientUnits='userSpaceOnUse' /%3E%3C/defs%3E%3Csodipodi:namedview id='base' pagecolor='%23ffffff' bordercolor='%23666666' borderopacity='1.0' inkscape:pageopacity='0.0' inkscape:pageshadow='2' inkscape:zoom='2.2861619' inkscape:cx='185.13784' inkscape:cy='164.76537' inkscape:document-units='px' inkscape:current-layer='layer1' showgrid='false' inkscape:window-width='1280' inkscape:window-height='978' inkscape:window-x='0' inkscape:window-y='14' /%3E%3Cmetadata id='metadata7'%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage' /%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cg inkscape:label='Capa 1' inkscape:groupmode='layer' id='layer1' transform='translate(0.1071386,-1002.682)'%3E%3Cg id='g3223' transform='matrix(0.1511216,0,0,0.1511216,-33.368447,978.68069)'%3E%3Cpath sodipodi:nodetypes='cccssc' id='path2383' d='M 253.76402,330.56162 L 314.69056,161.57824 L 556.81259,264.1116 L 448.45659,471.2938 C 439.58557,488.25563 413.71552,494.20367 402.65666,482.88965 L 253.76402,330.56162 z' style='fill:url(%23linearGradient3161);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1' /%3E%3Cpath sodipodi:nodetypes='csccc' id='path3163' d='M 399.3823,463.86839 C 408.19869,483.26444 426.7131,483.26444 433.32539,470.9215 C 439.93768,458.57856 525.45663,284.89574 525.45663,284.89574 L 439.05605,301.20606 C 439.05605,301.20606 383.5128,450.64381 399.3823,463.86839 z' style='fill:url(%23linearGradient3171);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1' /%3E%3Cpath sodipodi:nodetypes='ccccc' id='path3173' d='M 525.45663,284.89574 L 316.9491,176.89501 L 252.14865,177.33583 L 433.32539,305.17343 L 525.45663,284.89574 z' style='fill:url(%23linearGradient3181);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1' /%3E%3Cpath sodipodi:nodetypes='ccc' id='path3183' d='M 301.96123,176.45419 L 499.00747,290.18558 L 499.88911,290.6264' style='fill:%23552200;fill-rule:evenodd;stroke:%23552200;stroke-width:3;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1' /%3E%3Cpath sodipodi:nodetypes='ccc' style='fill:%23552200;fill-rule:evenodd;stroke:%23552200;stroke-width:3;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1' d='M 283.25106,177.13173 L 472.80337,295.71213 L 473.68501,296.15295' id='path3185' /%3E%3Cpath sodipodi:nodetypes='csccsscc' id='path3187' d='M 414.37016,487.23181 C 403.34968,480.61953 400.70476,473.12559 406.43541,451.08463 C 412.16607,429.04366 448.31325,292.83049 448.31325,292.83049 L 256.55684,158.82142 L 222.61376,300.76524 C 219.30114,314.61798 216.49624,324.58761 233.19343,339.11652 L 387.75811,473.60968 C 402.80026,485.75039 406.07197,486.5593 414.37016,487.23181 z' style='fill:url(%23linearGradient3211);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1' /%3E%3Cpath sodipodi:nodetypes='ccssscccsssc' id='path3213' d='M 440.39838,402.00644 L 449.35997,374.69491 C 449.35997,374.69491 477.52498,364.87983 501.42257,377.25537 C 525.32016,389.63091 506.54348,419.92963 529.58758,419.92963 C 552.63168,419.92963 568.8479,415.23546 559.03282,392.19136 C 549.21774,369.14726 537.26895,369.14726 537.26895,369.14726 C 537.26895,369.14726 551.35146,365.73332 558.60608,368.72052 C 559.82565,363.25865 557.72243,346.46925 557.72243,346.46925 C 557.72243,346.46925 580.06541,366.09645 587.81739,388.7109 C 595.98534,412.53885 588.28688,439.48374 534.61231,442.2238 C 494.80994,444.25568 495.06432,427.73967 492.07712,409.81648 C 489.08992,391.89329 441.25186,402.85993 440.39838,402.00644 z' style='fill:url(%23radialGradient3221);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: 85% 50%;
