--- a/style.css
+++ b/style.css
@@ -69,8 +69,7 @@ body {
   font-size: 14px;
 }
 
-.lang-box button:hover,
-.lang-box button:focus {
+.lang-box button:hover {
   color: white;
   background-color: brown;
 }
